--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,11 @@
 			<version>v1.0.0</version>
 		</dependency>
 		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>30.1-jre</version>
+		</dependency>
+		<dependency>
 			<groupId>decentralized-identity</groupId>
 			<artifactId>did-common-java</artifactId>
 			<version>0.2.0</version>
