add support for RSA keys

--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,11 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
 			<groupId>com.danubetech</groupId>
 			<artifactId>key-formats-java</artifactId>
 			<version>${key-formats-java.version}</version>
