--- a/pom.xml
+++ b/pom.xml
@@ -31,15 +31,14 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>11</java.version>
+
 		<maven.compiler.source>11</maven.compiler.source>
 		<maven.compiler.target>11</maven.compiler.target>
+
 		<junit-jupiter.version>5.7.0</junit-jupiter.version>
 		<java-multihash.version>v1.3.0</java-multihash.version>
 		<bitcoinj.version>0.15.8</bitcoinj.version>
 		<java-json-canonicalization.version>1.1</java-json-canonicalization.version>
-		<key-formats-java.version>0.3-SNAPSHOT</key-formats-java.version>
-		<jsonld-common-java.version>0.2-SNAPSHOT</jsonld-common-java.version>
 	</properties>
 
 	<profiles>
@@ -88,6 +87,7 @@
 								</jettyEnvXml>
 								<webInfIncludeJarPattern>^$</webInfIncludeJarPattern>
 								<containerIncludeJarPattern>^$</containerIncludeJarPattern>
+								<throwUnavailableOnStartupException>true</throwUnavailableOnStartupException>
 							</webApp>
 						</configuration>
 					</plugin>
@@ -98,25 +98,19 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-slf4j-impl</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
 			<groupId>decentralized-identity</groupId>
 			<artifactId>uni-registrar-driver</artifactId>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>decentralized-identity</groupId>
-			<artifactId>jsonld-common-java</artifactId>
-			<version>${jsonld-common-java.version}</version>
+			<artifactId>did-common-java</artifactId>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>decentralized-identity</groupId>
-			<artifactId>did-common-java</artifactId>
-			<scope>compile</scope>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-slf4j-impl</artifactId>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>commons-codec</groupId>
