--- a/pom.xml
+++ b/pom.xml
@@ -155,11 +155,13 @@
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-api</artifactId>
+			<version>${apache.log4j.version}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
+			<version>${apache.log4j.version}</version>
 			<scope>compile</scope>
 		</dependency>
 	</dependencies>
