--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>uni-registrar-driver-did-ion</artifactId>
 	<packaging>${packaging.type}</packaging>
-	<version>0.1-SNAPSHOT</version>
 
 	<parent>
 		<groupId>decentralized-identity</groupId>
 		<artifactId>uni-registrar</artifactId>
-		<version>0.1-SNAPSHOT</version>
+		<version>0.1.0</version>
 	</parent>
 
 	<repositories>
@@ -43,6 +42,35 @@
 	</properties>
 
 	<profiles>
+		<profile>
+			<id>ci</id>
+			<properties><packaging.type>jar</packaging.type></properties>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-enforcer-plugin</artifactId>
+						<version>3.0.0</version>
+						<executions>
+							<execution>
+								<id>enforce-no-snapshots</id>
+								<goals>
+									<goal>enforce</goal>
+								</goals>
+								<configuration>
+									<rules>
+										<requireReleaseDeps>
+											<message>No Snapshots Allowed!</message>
+										</requireReleaseDeps>
+									</rules>
+									<fail>true</fail>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
 		<profile>
 			<id>default</id>
 			<activation>
