--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,8 @@
 	<artifactId>uni-registrar-driver-did-ion</artifactId>
 	<packaging>${packaging.type}</packaging>
 	<name>uni-registrar-driver-did-ion</name>
+	<!--Standalone components need version tag	-->
+	<version>0.2.0</version>
 
 	<parent>
 		<groupId>decentralized-identity</groupId>
