--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<parent>
 		<groupId>decentralized-identity</groupId>
 		<artifactId>uni-registrar</artifactId>
-		<version>0.4.0</version>
+		<version>0.5-SNAPSHOT</version>
 	</parent>
 
 	<repositories>
